hphp/test/slow/reified-generics/param-verification-1.php.expectf
Catchable fatal error: Argument 1 passed to f() must be an instance of C<int, string, int>, C<int,_,string> given in %s on line 8
